check for fields validity

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>THE HERD</title>
   </head>
-  <body>
+  <body style="background-color: #121416">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
